Sat Nov  1 14:21:29 1997  Michael L.H. Brouwer  <michael@thi.nl>
	and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_checkin): When checking if we were holding the lock
	use delta->author instead of user since the latter might have been
	clobbered by a call to getcaller.  This resulted in the failure of
	test basica-7.
	[I don't completely follow the scenario where it gets clobbered,
	it but sounds vaguely plausible and the replacement seems
	cleaner, precisely because it avoids allocation issues -kingdon]

Wed Nov  5 20:16:12 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* checkin.c, checkout.c, commit.c, cvs.h, import.c, login.c,
	main.c, update.c: Change FALSE to 0 and TRUE to 1 and replace
	monstrosities like "cvswrite == TRUE" with just "cvswrite".  FALSE
	and TRUE sometimes conflicted with system headers (NextStep3.3?),
	but more to the point, good old 1 and 0 are fine and were used by
	most of CVS already.

Tue Nov  4 12:19:28 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_checkin, RCS_lock, RCS_unlock): Rename local variable
	quiet to checkin_quiet or some such, to avoid confusion with
	global variable quiet.

	* lock.c: Update comment to refer to add_rcs_file rather than "rcs
	-i".

	* rcs.h (struct rcsnode): Add comments for all fields.
	* rcs.c (RCS_delete_revs): Refuse to delete revisions which have
	symbolic names.  Fix fencepost bug which caused us to sometimes
	check one more revision than we should for locks, branches, and
	this.
	(findtag): New function, to help above code.

	* admin.c (admin): Take out writelocks not readlocks.  This has
	been a bug "forever", but may become more noticeable with
	rcs_internal_lockfile relying on the writelocks.

Mon Nov  3 10:17:19 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_rewrite): Don't write the file if noexec.
	* sanity.sh (basica, branches): Test for this.

Sat Nov  1 10:01:56 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
